--- a/css/Fallout4Terminal.theme.css
+++ b/css/Fallout4Terminal.theme.css
@@ -14,7 +14,7 @@
 @import url('https://commandcrafterhd.github.io/Fallout4TerminalTheme/css/main.css');
 /* ^ THIS IS THE MAIN IMPORT. DO NOT TOUCH THIS OR THE THEME WILL BREAK. ^ */
 
-/* @import url('https://commandcrafterhd.github.io/Fallout4TerminalTheme/css/disableCRT.css'); */
+@import url('https://commandcrafterhd.github.io/Fallout4TerminalTheme/css/disableCRT.css'); */
 /* ^ UNCOMMENT THIS IMPORT IF YOU WANT TO REMOVE THE CRT EFFECT ^ */
 
 /* TO CUSTOMIZE THE THEME, UNCOMMENT THE LINES BELOW AND REPLACE THE VARIABLES */
@@ -23,7 +23,7 @@
 
 :root {
   --background: #000700 !important;
-  --text-color: #4AEF98 !important;
+  --text-color: #FFFFFF !important;
   --highlight: var(--text-color) !important;
 }
 
