--- a/css/Fallout4Terminal.theme.css
+++ b/css/Fallout4Terminal.theme.css
@@ -11,7 +11,7 @@
  * @invite 6qd3SkP6Ch
 */
 
-@import url('https://raw.githubusercontent.com/SlimeBind/Fallout4TerminalTheme/main/css/Fallout4Terminal.theme.css');
+@import url('https://commandcrafterhd.github.io/Fallout4TerminalTheme/css/main.css');
 /* ^ THIS IS THE MAIN IMPORT. DO NOT TOUCH THIS OR THE THEME WILL BREAK. ^ */
 
 @import url('https://commandcrafterhd.github.io/Fallout4TerminalTheme/css/disableCRT.css'); */
